[package]
edition = "2021"
name = "teodevgroup_teo_docs_search_engine"
version = "0.0.8"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.13", default-features = false, features = ["napi5", "async", "chrono_date", "compat-mode"] }
napi-derive = "2.16.13"
tantivy = "0.22"
once_cell = "1.20.2"

[build-dependencies]
napi-build = "2.1.0"

[profile.release]
lto = true
